--- a/style.scss
+++ b/style.scss
@@ -21,5 +21,10 @@
  }
 
 nav{
-  background-color: rgb(243, 233, 241,);
+  background-color: rgb(243, 233, 241);
 }
+
+  input{
+    width: 100%;
+    border: 1px solid
+  }
