--- a/style.scss
+++ b/style.scss
@@ -46,3 +46,11 @@ select{
   background-color: rgb(243, 233, 241);
   padding: 10px; 
 }
+.btn-dark{
+  width: 100%;
+  margin-top: 20px;
+}
+.title_price{
+  display: flex;
+  justify-content: space-between;
+}
