--- a/style.css
+++ b/style.css
@@ -51,4 +51,18 @@ select {
   background-color: #f3e9f1;
   padding: 10px;
 }
+
+.btn-dark {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.title_price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 /*# sourceMappingURL=style.css.map */
