--- a/style.scss
+++ b/style.scss
@@ -54,3 +54,13 @@ select{
   display: flex;
   justify-content: space-between;
 }
+.basket{
+  width: 100%;
+  margin-left: 45px;
+}
+h4{
+  text-align: center;
+}
+table{
+  margin-bottom: 50px;
+}
