--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  padding: 10px;
+}
+
 .masthead {
   height: 100vh;
   min-height: 500px;
@@ -59,14 +63,22 @@ select {
 
 @media only screen and (min-width: 768px) {
   .btn-dark {
-    width: 35%;
-    margin-left: 65%;
+    width: 30%;
+    margin-left: 68%;
+  }
+  .btnAcc {
+    margin-left: 250px;
   }
 }
 
 @media only screen and (min-width: 1024px) {
   .btn-dark {
-    margin-top: -40px;
+    width: 35%;
+    margin-left: 65%;
+  }
+  .btnAcc {
+    margin-left: 30px;
+    margin-left: 340px;
   }
 }
 
