--- a/style.css
+++ b/style.css
@@ -114,4 +114,18 @@ main img {
   -o-object-fit: cover;
      object-fit: cover;
 }
+
+.list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.list img {
+  width: 20%;
+  height: 20%;
+}
 /*# sourceMappingURL=style.css.map */
